update file manager + edit text file